--- a/frontend/my-app/src/pages/SignIn.css
+++ b/frontend/my-app/src/pages/SignIn.css
@@ -5,7 +5,7 @@ body,html {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #fff;
+    background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
     font-family: 'Helvetica Neue', sans-serif;
 }
 
@@ -19,6 +19,8 @@ form {
     padding-top: 10px;
     padding-bottom: 10px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.3); /* Stronger shadow */
+    background-color: white;
+    border-radius: 15px;
 }
 
 h1 {
